# on-air

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  LightControl.py  README.md  app.py  config.py  every-5-min-9-to-5-MON-FRI.job  getDeviceList.py  get_device_list.py  get_process_name.py  get_vda_power_state.py  hostActions.py  lightsOff.py  lightsOn.py  logger.py  off_air.py  on_air.py  pyproject.toml  run-app-status-light.sh  run-off-air.sh  run-on-air.sh  tasks.py
.github/workflows/: test-and-lint.yml
api/: Light.py  LightControl.py  actions.py  colors.py
cronjobs/: every-5-min-9-to-5-MON-FRI.job  every-5th-minute.job  every-minute-cron.job
hass/: api.py  cli.py  fixtures.py
homekit/: api.py  control.py
host/: actions.py  cache.py  colors.py  control.py  discover_processes.py  get_device_state.py  get_vda_power_state.py  get_vdc_assistant_power_log.sh  logger.py  management.py  scraping.py
scripts/: cron-mgmt.sh  deploy_terminal_alias  macos_audio_engine_state.sh  macos_camera_state.sh  macos_logs_camera_interface.sh  off-air  offair  on-air  onair  parse_vdc_assistant_power_log.sh
tests/: test_hass_api.py  test_hass_cli.py  test_homekit.py
tests/homekit/: test_homekit_api.py
tests/host/: test_cache.py  test_scraping.py
