[tool.poetry]
name = "on-air"
version = "0.1.0"
description = ""
authors = ["Kyle Cole <54221202+cakeholeDC@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
python-dotenv = "^0.19.2"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
