[tool.poetry]
name = "on-air"
version = "0.1.0"
description = ""
authors = ["Kyle Cole <cakeholeDC@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.19.2"
psutil = "^5.9.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
